BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Meeting_Expense_Reference_BMS_EMEA__c.object
<CustomObject>
    <description>VPRO Jan-2014:  Req 821: &quot;During the Meeting Post-Execution phase, the system must provide the ability to add Expense References&quot;</description>
    <fields>
        <fullName>External_ID_BMS_SHARED__c</fullName>
        <description>VPRO Feb 2014: external ID used for data loading</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice_sent_to_accounting_BMS_EMEA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPRO Jan-2014: Meeting Expense References have a Type, a Reference, and a Checkbox to flag whether the invoice was sent to accounting.</description>
        <label>Invoice sent to accounting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_BMS_EMEA__c</fullName>
        <description>VPRO Jan-2014: Meeting Expense References are child records from Meetings.</description>
        <label>Meeting</label>
        <referenceTo>Medical_Event_vod__c</referenceTo>
        <relationshipLabel>Meeting Expense References</relationshipLabel>
        <relationshipName>Meeting_Expense_References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reference_No_BMS_EMEA__c</fullName>
        <description>VPRO Jan-2014: Meeting Expense References have a Type, a Reference, and a Checkbox to flag whether the invoice was sent to accounting.</description>
        <label>Reference No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Category_BMS_EMEA__c</fullName>
        <description>VPRO Jan-2014: Meeting Expense References have a Type, a Reference, and a Checkbox to flag whether the invoice was sent to accounting.</description>
        <label>Type/Category</label>
        <picklist>
            <picklistValues>
                <fullName>Concur Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP PO</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Meeting Expense Reference</label>
    <nameField>
        <displayFormat>MER-{0000000}</displayFormat>
        <label>Meeting Expense Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Expense References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BMS_EMEA_FFM_Expense_Reference_Co_Author</fullName>
        <active>true</active>
        <description>VPRO 7 March 2014: Validation to not allow a co-author of the meeting to modify any fields.</description>
        <errorConditionFormula>AND(
$User.Id &lt;&gt; Meeting_BMS_EMEA__r.OwnerId,
TEXT(Meeting_BMS_EMEA__r.FFM_Step_BMS_EMEA__c) = &apos;Meeting Post-Execution&apos;,
OR( 
$Profile.Name = &apos;BMS - EMEA - REP - MSL&apos;, 
$Profile.Name = &apos;BMS - EMEA - REP - SALES&apos;) 
)</errorConditionFormula>
        <errorDisplayField>External_ID_BMS_SHARED__c</errorDisplayField>
        <errorMessage>You are not allowed to change any fields as you are co-author of the Meeting.</errorMessage>
    </validationRules>
</CustomObject>